--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="ocr">OCR</string>
     <string name="take_image">Take Image</string>
     <string name="logo">logo</string>
+    <string name="ocr_analytics">(OCR) Analytics</string>
 </resources>
